		Removed duplicate table column.

	mbfido:
		In rfc2ftn if we cannot find the incoming charset from the
		standard table we will fall back to the charset in the
		Content-type: header and try to initialize iconv with that
		value.
		For debug help to me, the headers Content-Type and
		Content-Transfer-Encoding are temporary stored in the fido
		message as kludges.

	mbnntp:
		Suppress logging of passwords.


v0.91.6		05-Mar-2007 - 07-Mar-2007

	upgrade:
		This upgrade is not needed if you are happy with the current
		symbolic links in the download fileareas.
		You need to remove all existing symbolic links with paths, and
		recreate the symbolic links without pathnames do:

		mbse$ cd /opt/mbse/ftp
		mbse$ find pub -type l -exec rm '{}' \;
		mbse$ mbfile check
		
	mbfido:
		The add file function now creates links without pathnames.

	mbfile:
		The check command now repairs filenames without using absolute
		pathnames.
		The adopt, import and move functions now make links without
		path.

	mbsebbs:
		Uploaded files now have symlinks without pathnames.


v0.91.5		18-Feb-2007 - 05-Mar-2007

		With this version de default internal character encoding is
		UTF-8. BBS users who have a UTF-8 terminal can use the bbs in
		UTF-8 mode and should have no troubles at all reading and
		writing messages in several language encodings.
		There is extra logging which will go away ASAP.

	upgrade:
		Compile and install this new version. 
		In all macro files html.* change the charset to UTF-8.
		If you still have all default macro files then in the source
		directory mbsebbs/examples simply run "make macros" to install
		the updated versions.
		Run "mbfile index -f " once to regenerate all download html
		index pages with UTF-8 encoding. Check the error.log for
		errors.
		In mbsetup menu 1.3.7 change logo.asc into logo.ans and make
		sure you have that file. A note about the logo file, it will
		be displayed before we know if a user has a utf-8 or ansi